--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar
+{display: none}
+
+*{
+    @apply transition-colors duration-200
+} 
